--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ button {
     font-size: 24px;
     padding: 5px 10px;
     font-family: 'Zen Dots', sans-serif;
-    box-shadow: 2px 2px 5px 0 var(--black);
+    box-shadow: 2px 2px 5px 0 var(--black); 
     display: none;
 }
 
@@ -243,20 +243,35 @@ footer {
     width: 20vw;
     padding-left: 10px;
     padding-right: 10px;
+    box-shadow: 0px 0px 7px 0 var(--off-white);
+}
+
+#footer-middle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 0;
+}
+
+#footer-middle p {
+    font-size: 1rem;
+    margin-top: 0.5vh;
+    margin-bottom: 0;
 }
 
 #enemy-choice-div {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 18vh;
-    width: 18vh;
+    height: 16vh;
+    width: 16vh;
     border-radius: 50%;
     background-color: var(--off-white);
 }
 
 #enemy-choice-div span {
-    font-size: 5rem;
+    font-size: 3.5rem;
 }
 
 #footer-right {
@@ -269,6 +284,7 @@ footer {
     width: 20vw;
     padding-left: 10px;
     padding-right: 10px;
+    box-shadow: 0px 0px 7px 0 var(--off-white);
 }
 
 @media only screen and (max-width: 1120px) {
