--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-end;
   overflow: hidden;
 }
 
@@ -128,11 +128,12 @@ button {
     background-color: var(--black);
     color: var(--off-white);
     border: none;
-    font-size: 24px;
-    padding: 5px 10px;
+    font-size: 2rem;
+    padding: 10px 15px;
     font-family: 'Zen Dots', sans-serif;
     box-shadow: 2px 2px 5px 0 var(--black); 
     display: none;
+    margin-bottom: 10vh;
 }
 
 button:hover {
@@ -147,13 +148,13 @@ button:hover {
 }
 
 .result-alert {
-    height: 25vh;
-    opacity: 85%;
+    height: 15vh;
     width: 100%;
 }
 
 #player-win-alert, #enemy-win-alert, #tie-alert {
-    font-size: 24px;
+    font-size: 1.5rem;
+
 }
 
 @media only screen and (max-width: 1200px) {
@@ -237,7 +238,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 4px solid var(--off-white);
+    border: 2px solid var(--off-white);
     border-radius: 5px;
     height: 14vh;
     width: 20vw;
@@ -287,7 +288,7 @@ footer {
     box-shadow: 0px 0px 7px 0 var(--off-white);
 }
 
-@media only screen and (max-width: 1120px) {
+@media only screen and (max-width: 1250px) {
     #footer-left, #footer-right {
         font-size: 32px;
     }
@@ -300,7 +301,7 @@ footer {
     }
 }
 
-@media only screen and (max-width: 475px) {
+@media only screen and (max-width: 550px) {
     #footer-left, #footer-right {
         font-size: 18px;
         height: 8vh;
