--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ main {
   align-items: center;
   justify-content: flex-end;
   overflow: hidden;
+  cursor: crosshair;
 }
 
 .element p {
@@ -139,6 +140,7 @@ button {
 button:hover {
     background-color: var(--off-white);
     color: var(--black);
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 350px) {
