--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   overflow: hidden;
   cursor: crosshair;
 }
@@ -122,6 +122,10 @@ main {
     font-family: 'Zen Dots', cursive;
     font-size: 28px;
     opacity: 85%;
+}
+
+#water {
+    justify-content: flex-end;
 }
 
 button {
@@ -150,23 +154,24 @@ button:hover {
 }
 
 .result-alert {
-    height: 15vh;
+    height: 19vh;
     width: 100%;
 }
 
-#player-win-alert, #enemy-win-alert, #tie-alert {
+ #round-alert {
     font-size: 1.5rem;
+    color: var(--black);
 
 }
 
 @media only screen and (max-width: 1200px) {
-    #player-win-alert, #enemy-win-alert, #tie-alert {
+    #round-alert {
         font-size: 22px;
     }
 }
 
 @media only screen and (max-width: 800px) {
-    #player-win-alert, #enemy-win-alert, #tie-alert {
+    #round-alert {
         font-size: 14px;
     }
 }
